# ExperienceLeagueChatBotAWS

./: .env.template  .gitignore  .railwayignore  AEP_INTEGRATION_GUIDE.md  AGENTS.md  AWS_BEDROCK_MODELS.md  BRANCH_STRATEGY.md  Bedrock issues.md  CHANGES_TODAY_SUMMARY.md  CITATION_RELEVANCE_EXPLAINED.md  CITATION_SYSTEM_COMPLETE.md  DATABASE_RECORDS_CHECKER_GUIDE.md  DEPLOYMENT.md  DOCUMENTATION_AUTO_UPDATE_FEATURE.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_UPDATE_COMPLETE.md  Dockerfile  ENHANCED_ANALYTICS_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_ANALYTICS_ISSUE.md  FUTURE_ENHANCEMENTS.md  HYBRID_MODELS_README.md  LEGAL_DISCLAIMER_IMPLEMENTATION.md  LOADER_IMPLEMENTATION_SUMMARY.md  METADATA_SYSTEM_COMPLETE.md  MONITORING_FILES.md  MONITORING_GUIDE.md  PERFORMANCE_COMPARISON_README.md  POSTGRES_TABLE_CREATION_GUIDE.md  POST_AWS_TESTING_CHECKLIST.md  PRODUCTION_SECURITY_TESTING.md  QUERY_ENHANCEMENT_TESTING_GUIDE.md  QUERY_PREPROCESSING_IMPLEMENTATION.md  RAG_OPTIMIZATION_COMPLETE_SUMMARY.md  RAG_OPTIMIZATION_SUMMARY.md  RAILWAY_ARCHITECTURE_EXPLANATION.md  RAILWAY_BUILD_VALIDATION.md  RAILWAY_DATABASE_CHECK_GUIDE.md  RAILWAY_DB_CHECK_GUIDE.md  RAILWAY_DEPLOYMENT.md  (+155 more)
.streamlit/: secrets.toml
archive/: ADVANCED_TEST_QUESTIONS.md  CACHE_AND_STATE_MANAGEMENT.md  KNOWLEDGE_BASE_UPDATE_STATUS.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  MONITORING_STATUS.md  QUICK_SECURITY_TEST.md  QUICK_TEST_QUESTIONS.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_FIXES.md  TAGGING_IMPLEMENTATION_SUMMARY.md  TEST_RESULTS.md  pytest.ini  simplified_admin_solution.py  test_production_security.py  test_questions.md  test_security.py  test_security_simple.py  test_tagging_database.py
backend/: README.md  main.py  mcp_server.py  requirements-dev.txt  requirements.txt
config/: api_docs_repos.py  auto_retraining_config.py  cja_toc_exl_overrides.json  exams.py  interview_profiles.py  prompts.py  settings.py
data/: metadata_registry.json
database/: migrate_to_postgresql.sql  schema.sql
docs/: ADMIN_AUTHENTICATION.md  CITATION_FLOW.md
feedback_data/: feedback.json  retraining_data.json
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
reports/: cja_toc_exl_mapping.csv
scripts/: README_aws_setup.md  README_testing.md  add_aep_to_existing_kb.py  add_cja_aep_files.py  add_missing_files.py  add_target_metadata.py  build_cja_toc_exl_mapping.py  check_ingestion_status.py  create_knowledge_base.py  create_simple_kb.py  enrich_citation_metadata.py  extract_metadata_from_github.py  extract_metadata_from_s3.py  fetch_redirects.py  fix_all_chunk_urls.py  fix_citation_urls.py  fix_cja_urls.py  fix_cja_urls_correct_structure.py  fix_cja_urls_remove_extra_path.py  get_aws_env_vars.py  ingest_to_chroma.py  ingest_with_media.py  integrate_aep_with_existing_kb.py  knowledge_base_guide.py  list_knowledge_bases.py  monitor_ingestion.sh  monitor_kb_update.py  quick_test_questions.py  quick_update_kb.sh  railway_chroma_reload.sh  run_api_docs_workflow.py  run_cja_readiness.py  setup.sh  setup_env.py  (+20 more)
(+237 files in other folders)
